--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "node-boleto-rm",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Geração Boleto no Node.js",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "test": "mocha \"./test/unit/**/*.spec.js\" && mocha \"./test/integration/**/*.spec.js\" && mocha \"./test/e2e/**/*.spec.js\""
   },
+  "keywords": [
+    "boleto",
+    "layout boleto"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/jtairone/node-boleto-rm.git"
